index and Redirction update

--- a/vercel.json
+++ b/vercel.json
@@ -180,6 +180,72 @@
     { "source": "/blog/dynamics-365-business-central-vs-great-plains/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-vs-great-plains/", "permanent": true },
     { "source": "/blog/web-stories/", "destination": "https://blog.dynamicssquare.co.uk/web-stories/", "permanent": true },
     { "source": "/blog/web-stories/top-5-reasons-to-upgrade-from-dynamics-nav-to-business-central/", "destination": "https://blog.dynamicssquare.co.uk/web-stories/top-5-reasons-to-upgrade-from-dynamics-nav-to-business-central/", "permanent": true },
-    { "source": "/blog/web-stories/top-10-benefits-of-dynamics-365-sales/", "destination": "https://blog.dynamicssquare.co.uk/web-stories/top-10-benefits-of-dynamics-365-sales/", "permanent": true }
+    { "source": "/blog/web-stories/top-10-benefits-of-dynamics-365-sales/", "destination": "https://blog.dynamicssquare.co.uk/web-stories/top-10-benefits-of-dynamics-365-sales/", "permanent": true },
+
+
+
+
+    { "source": "/blog/dynamics-365-business-central-vs-great-plains/dynamics-365-business-central-vs-great-plains-2/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-vs-great-plains/", "permanent": true },
+    { "source": "/dynamics-365-business-central-vs-great-plains/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-vs-great-plains/", "permanent": true },
+    { "source": "/what-is-azure-iot-central/", "destination": "https://blog.dynamicssquare.co.uk/what-is-azure-iot-central/", "permanent": true },
+    { "source": "/what-is-dynamics-365-business-central/", "destination": "https://blog.dynamicssquare.co.uk/what-is-dynamics-365-business-central/", "permanent": true },
+    { "source": "/dynamics-365-storage-cost/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-storage-cost/", "permanent": true },
+    { "source": "/blog", "destination": "https://blog.dynamicssquare.co.uk/", "permanent": true },
+    { "source": "/migrating-from-dynamics-ax-to-dynamics-365/", "destination": "https://blog.dynamicssquare.co.uk/migrating-from-dynamics-ax-to-dynamics-365/", "permanent": true },
+    { "source": "/data-cleaning-in-power-bi/", "destination": "https://blog.dynamicssquare.co.uk/data-cleaning-in-power-bi/", "permanent": true },
+    { "source": "/best-iot-platforms/", "destination": "https://blog.dynamicssquare.co.uk/best-iot-platforms/", "permanent": true },
+    { "source": "/power-bi-vs-jet-reports/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-vs-jet-reports/", "permanent": true },
+    { "source": "/why-microsoft-dynamics-nav-used-for/", "destination": "https://blog.dynamicssquare.co.uk/why-microsoft-dynamics-nav-used-for/", "permanent": true },
+    { "source": "/blog/perfect-guide-for-microsoft-dynamics-365-pricing-and-licensing/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-pricing-and-licensing/", "permanent": true },
+    { "source": "/what-makes-ms-dynamics-crm-so-good-for-customer-service/", "destination": "https://blog.dynamicssquare.co.uk/what-makes-ms-dynamics-crm-so-good-for-customer-service/", "permanent": true },
+    { "source": "/13-strategic-reasons-to-implement-power-bi-for-your-business/", "destination": "https://blog.dynamicssquare.co.uk/implement-power-bi-for-your-business/", "permanent": true },
+    { "source": "/power-bi-architecture/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-architecture/", "permanent": true },
+    { "source": "/perfect-guide-for-microsoft-dynamics-365-pricing-and-licensing/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-pricing-and-licensing/", "permanent": true },
+    { "source": "/blog/dynamics-nav/why-upgrade-nav-2009-to-dynamics-nav-2017/", "destination": "https://blog.dynamicssquare.co.uk/why-upgrade-nav-2009-to-dynamics-nav-2017/", "permanent": true },
+    { "source": "/how-to-avail-the-dynamics-365-business-central-trial/", "destination": "https://blog.dynamicssquare.co.uk/how-to-avail-the-dynamics-365-business-central-trial/", "permanent": true },
+    { "source": "/topics/erp/", "destination": "https://blog.dynamicssquare.co.uk/category/erp/", "permanent": true },
+    { "source": "/category/dynamics-nav/", "destination": "https://blog.dynamicssquare.co.uk/category/dynamics-nav/", "permanent": true },
+    { "source": "/dynamics-365-business-central-2022-wave-1/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-2022-wave-1/", "permanent": true },
+    { "source": "/microsoft-dynamics-crm-for-perfect-sales-management/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-crm-for-perfect-sales-management/", "permanent": true },
+    { "source": "/7-best-practices-for-successful-erp-implementation/", "destination": "https://blog.dynamicssquare.co.uk/7-best-practices-for-successful-erp-implementation/", "permanent": true },
+    { "source": "/analyzation-of-power-bi-vs-jet-report/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-vs-jet-reports/", "permanent": true },
+    { "source": "/what-is-microsoft-dynamics-365-finance/", "destination": "https://blog.dynamicssquare.co.uk/what-is-microsoft-dynamics-365-finance/", "permanent": true },
+    { "source": "/why-your-business-needs-crm-software/", "destination": "https://blog.dynamicssquare.co.uk/why-your-business-needs-crm-software/", "permanent": true },
+    { "source": "/dynamics-365-business-central-2021-wave2-highlights/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-wave-2/", "permanent": true },
+    { "source": "/dynamics-365-business-central-vs-gp/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-vs-gp/", "permanent": true },
+    { "source": "/why-your-business-needs-power-bi/", "destination": "https://blog.dynamicssquare.co.uk/why-power-bi-for-business/", "permanent": true },
+    { "source": "/microsoft-dynamics-ax-features/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-ax-features/", "permanent": true },
+    { "source": "/power-bi-reports/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-reports/", "permanent": true },
+    { "source": "/what-is-microsoft-azure-iot-internet-of-things/", "destination": "https://blog.dynamicssquare.co.uk/what-is-microsoft-azure-iot-internet-of-things/", "permanent": true },
+    { "source": "/microsoft-dynamics-365-business-central-for-manufacturing/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-365-business-central-for-manufacturing/", "permanent": true },
+    { "source": "/what-is-dynamics-365-supply-chain-management/", "destination": "https://blog.dynamicssquare.co.uk/what-is-dynamics-365-supply-chain-management/", "permanent": true },
+    { "source": "/what-is-business-central-implementation-methodology/", "destination": "https://blog.dynamicssquare.co.uk/what-is-business-central-implementation-methodology/", "permanent": true },
+    { "source": "/implement-power-bi-for-your-business/", "destination": "https://blog.dynamicssquare.co.uk/implement-power-bi-for-your-business/", "permanent": true },
+    { "source": "/blog/dynamics-365/dynamics-365-business-central-vs-great-plains/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-vs-great-plains/", "permanent": true },
+    { "source": "/install-microsoft-dynamics-365-business-central-on-premises/", "destination": "https://blog.dynamicssquare.co.uk/install-microsoft-dynamics-365-business-central-on-premises/", "permanent": true },
+    { "source": "/dynamics-365-business-central-wave-2/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-wave-2/", "permanent": true },
+    { "source": "/author/alicejackson/", "destination": "https://blog.dynamicssquare.co.uk/author/alicejackson/", "permanent": true },
+    { "source": "/how-to-choose-the-right-cloud-based-erp-crm-software/", "destination": "https://blog.dynamicssquare.co.uk/how-to-choose-the-right-cloud-based-erp-crm-software/", "permanent": true },
+    { "source": "/what-is-azure-iot-hub/", "destination": "https://blog.dynamicssquare.co.uk/what-is-azure-iot-hub/", "permanent": true },
+    { "source": "/blog/microsoft-dynamics-ax-for-distributors/2/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-ax-for-distributors/", "permanent": true },
+    { "source": "/microsoft-dynamics-ax-for-distributors/2/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-ax-for-distributors/", "permanent": true },
+    { "source": "/10-best-erp-systems-for-small-businesses/", "destination": "https://blog.dynamicssquare.co.uk/10-best-erp-systems-for-small-businesses/", "permanent": true },
+    { "source": "/business-central-vs-finance-and-supply-chain/", "destination": "https://blog.dynamicssquare.co.uk/business-central-vs-finance-and-supply-chain/", "permanent": true },
+    { "source": "/biggest-technology-trends/", "destination": "https://blog.dynamicssquare.co.uk/biggest-technology-trends/", "permanent": true },
+    { "source": "/dynamics-365-business-central-vs-dynamics-365-sales/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-vs-dynamics-365-sales/", "permanent": true },
+    { "source": "/reasons-to-upgrade-accounting-software/", "destination": "https://blog.dynamicssquare.co.uk/reasons-to-upgrade-accounting-software/", "permanent": true },
+    { "source": "/blog/data-cleaning-in-power-bi/2/", "destination": "https://blog.dynamicssquare.co.uk/data-cleaning-in-power-bi/", "permanent": true },
+    { "source": "/data-cleaning-in-power-bi/2/", "destination": "https://blog.dynamicssquare.co.uk/data-cleaning-in-power-bi/", "permanent": true },
+    { "source": "/upgrade-dynamics-nav-to-dynamics-365-business-central/", "destination": "https://blog.dynamicssquare.co.uk/upgrade-dynamics-nav-to-dynamics-365-business-central/", "permanent": true },
+    { "source": "/microsoft-dynamics-ax-for-distributors/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-ax-for-distributors/", "permanent": true },
+    { "source": "/dynamics-365-field-service-7-things-to-know-before-setting-up/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-field-service-7-things-to-know-before-setting-up/", "permanent": true },
+    { "source": "/category/field-service/", "destination": "https://blog.dynamicssquare.co.uk/category/field-service/", "permanent": true },
+    { "source": "/how-to-upgrade-microsoft-dynamics-nav-to-business-central/", "destination": "https://blog.dynamicssquare.co.uk/how-to-upgrade-microsoft-dynamics-nav-to-business-central/", "permanent": true },
+    { "source": "/migrating-from-dynamicsgp-to-d365-businesscentral/", "destination": "https://blog.dynamicssquare.co.uk/migrating-dynamics-gp-to-d365-business-central/", "permanent": true },
+    { "source": "/dynamics-365-business-central-vs-dynamics-365-crm/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-vs-dynamics-365-crm/", "permanent": true },
+    { "source": "/power-bi-for-mac-learn-how-to-use-power-bi-on-mac-devices/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-for-mac-learn-how-to-use-power-bi-on-mac-devices/", "permanent": true },
+    { "source": "/power-bi-features/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-features/", "permanent": true },
+    { "source": "/shopify-connector-for-dynamics-365-business-central/", "destination": "https://blog.dynamicssquare.co.uk/shopify-connector-for-dynamics-365-business-central/", "permanent": true },
+    { "source": "/microsoft-dynamics-365-support/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-365-support/", "permanent": true }
   ]
 }
