--- a/vercel.json
+++ b/vercel.json
@@ -65,6 +65,7 @@
     { "source": "/topics/dynamics-crm/", "destination": "/", "permanent": true },
     { "source": "/topics/microsoft-nav-2017/", "destination": "/products/microsoft-dynamics-nav/", "permanent": true },
     { "source": "/microsoft-cloud-for-manufacturing", "destination": "/industries/microsoft-cloud-for-manufacturing/", "permanent": true },
+    { "source": "/microsoft-cloud-for-manufacturing/", "destination": "/industries/microsoft-cloud-for-manufacturing/", "permanent": true },
     { "source": "/industries/startup/", "destination": "/industries/startups/", "permanent": true },
     { "source": "/sitemap_index.xml", "destination": "sitemap.xml", "permanent": true },
     { "source": "/products/azure-iot-edge", "destination": "/products/azure-iot-edge/", "permanent": true },
@@ -73,7 +74,7 @@
     { "source": "/products/microsoft-dynamics-365-field-service.html", "destination": "/products/microsoft-dynamics-365-field-service/", "permanent": true },
     { "source": "/sitemap_index.xml/", "destination": "sitemap.xml", "permanent": true },
     { "source": "/de-de/project/", "destination": "/", "permanent": true },
-    { "source": "/404", "destination": "/", "permanent": true },
+    { "source": "/404", "destination": "/404/", "permanent": true },
     { "source": "/our-services/upgrade-to-business-central.html", "destination": "/dynamics-365-business-central-upgrade/", "permanent": true },
     { "source": "/products/microsoft-dynamics-365/human-resources/", "destination": "/products/dynamics-365-human-resources/", "permanent": true },
     { "source": "/topics/microsoft-dynamics-365-business-central/", "destination": "/products/dynamics-365-business-central/", "permanent": true },
