--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
     "@splinetool/react-spline": "^2.2.3",
+    "@splinetool/runtime": "^0.9.174",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "emailjs-com": "^3.2.0",
+    "gsap": "^3.11.4",
     "next": "12.2.5",
     "next-sitemap": "^3.1.43",
     "next-videos": "^1.5.0",
