--- a/vercel.json
+++ b/vercel.json
@@ -247,6 +247,15 @@
     { "source": "/power-bi-for-mac-learn-how-to-use-power-bi-on-mac-devices/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-for-mac-learn-how-to-use-power-bi-on-mac-devices/", "statusCode": 301 },
     { "source": "/power-bi-features/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-features/", "statusCode": 301 },
     { "source": "/shopify-connector-for-dynamics-365-business-central/", "destination": "https://blog.dynamicssquare.co.uk/shopify-connector-for-dynamics-365-business-central/", "statusCode": 301 },
-    { "source": "/microsoft-dynamics-365-support/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-365-support/", "statusCode": 301 }
+    { "source": "/microsoft-dynamics-365-support/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-365-support/", "statusCode": 301 },
+
+    { "source": "/email-ax-to-finance/", "destination": "https://blog.dynamicssquare.co.uk/migrating-from-dynamics-ax-to-dynamics-365/", "statusCode": 301 },
+    { "source": "/email-dynamics365-crm/", "destination": "/products/microsoft-dynamics-crm/", "statusCode": 301 },
+    { "source": "/email-gp-to-bc/", "destination": "https://blog.dynamicssquare.co.uk/migrating-dynamics-gp-to-d365-business-central/", "statusCode": 301 },
+    { "source": "/email-mtd-compliant/", "destination": "/", "statusCode": 301 },
+    { "source": "/support-dynamics-365/", "destination": "", "statusCode": 301 },
+    { "source": "/support-dynamics-365/", "destination": "/our-services/dynamics-365-support-services/", "statusCode": 301 },
+    { "source": "/upgrade-nav-to-business-central/", "destination": "/dynamics-nav-to-business-central/", "statusCode": 301 }
+
   ]
 }
