update page and popupform

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-icons": "^1.9.1",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.11.4",
+    "js-cookie": "^3.0.5",
     "next": "12.2.5",
     "next-sitemap": "^3.1.43",
     "next-videos": "^1.5.0",
