--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-icons": "^1.9.1",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.11.4",
+    "html-react-parser": "^4.0.0",
     "js-cookie": "^3.0.5",
     "next": "12.2.5",
     "next-sitemap": "^3.1.43",
@@ -29,6 +30,8 @@
     "react-iframe": "^1.8.0",
     "react-modal-video": "^1.2.10",
     "react-player": "^2.11.0",
+    "react-share-social": "^0.1.55",
+    "react-top-loading-bar": "^2.3.1",
     "swiper": "^8.4.0"
   },
   "devDependencies": {
