--- a/vercel.json
+++ b/vercel.json
@@ -118,127 +118,7 @@
     { "source": "/case-studies/global-tea/", "destination": "/case-studies/nav16-support/", "statusCode": 301 },
     { "source": "/dynamics-365-business-central-support/", "destination": "/d365-business-central-support/", "statusCode": 301 },
 
-    { "source": "https://blog.dynamicssquare.co.uk/", "destination": "/blog/", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 },
-    { "source": "", "destination": "", "statusCode": 301 }
-
+    { "source": "https://blog.dynamicssquare.co.uk/", "destination": "/blog/", "statusCode": 301 }
 
   ]
 }
