--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@splinetool/runtime": "^0.9.174",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "cheerio": "^1.0.0-rc.12",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.11.4",
     "html-react-parser": "^4.0.0",
